--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <textarea name="message" rows="6" placeholder="Your Message"></textarea>
             <button type="submit" class="btn">Send Message</button>
         </form>
+        <span id="msg"></span>
     </div>
         </div>
     </div>
@@ -94,11 +95,16 @@
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyY6TXaXgDdtJbrevGl_tmevdxcL7SxlSlHYYlK2lvZKV5b8TnGizAEXdkvoAgR1V9HsQ/exec'
         const form = document.forms['submit-to-google-sheet']
+        const msg = document.getElementById('msg')
       
         form.addEventListener('submit', e => {
           e.preventDefault()
           fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => console.log('Success!', response))
+            .then(response => {
+                msg.innerHTML = "Thank you for your message! I will get back to you as soon as possible."
+                setTimeout(function(){ msg.innerHTML = ""; }, 3000);
+                form.reset()
+            })
             .catch(error => console.error('Error!', error.message))
         })
       </script>
