Fixed spelling and grammer issues

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2 class = "subtitle">About<span class="green"> me: </span></h2>
                     <h3 class = 'padding'>I am a first year at the University of Chicago (GPA: 3.92). I am mostly passionate about software development,
                         and I am experienced in various programming languages, most prominently Python. I am adept in developing websites and databases, handling the underlying systems within, and I am looking for an internship for the summer of 2023.
-                        <br><br>Relevant courses taken: Introduction to Computer Science I, Honors Calculas and Mechanics.
+                        <br><br>Relevant courses taken: Introduction to Computer Science I, Honors Calculus and Mechanics.
                     </h3>
                 </div>
         </div>
