--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Personal Portfolio Website</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="icon" href="imgs/logo.png">
 </head>
 <body>
     <header>
@@ -76,7 +77,7 @@
                         <p><a href="mailto:Ziad.A.Elshahawy@gmail.com"class="margin-bottom"><i class="fas fa-paper-plane"></i> Ziad.A.Elshahawy@gmail.com</s> <br></a></p>
                         <a href="https://www.linkedin.com/in/ziad-elshahawy"class="margin-bottom"> <i class="fab fa-linkedin fa-3x"></i></a>
                         <a href="https://github.com/zelshahawy"class="margin-bottom"> <i class="fab fa-github fa-3x"></i></a> <br> 
-                        <a href="New Resume - Ziad.pdf" download class="cv-btn">Download CV</a>
+                        <a href="attachments/resume" download class="cv-btn">Download CV</a>
                 </div>
                 
             </div>
