updated nav bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container constheader">
             <nav>
                 <img src="imgs/logo.png" alt="Ziad Elshahawy" class = "logo">
                 <ul>
