updated nav bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <div class="container constheader">
-            <nav>
+        <div>
+            <nav class="constheader">
                 <img src="imgs/logo.png" alt="Ziad Elshahawy" class = "logo">
                 <ul>
                     <li class="current"><a href="index.html">Home</a></li>
