--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                 </ul>
             </nav>
         </div>
+        <div class="header-text">
+            <h1> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
+            <h2 class="centered-text">"Hello, world!"</h2>
     </header>
     <section id="about">
-        <h1> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
-        <h2 class="centered-text">"Hello, world!"</h2>
         <div class="container">
             <div class = "row">
                 <div class="about-col-2">
