updated nav bar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 </ul>
             </nav>
         </div>
-        <div class="header-text">
-            <h1> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
+        <div>
+            <h1 class = "header-text"> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
             <h2 class="centered-text">"Hello, world!"</h2>
+        </div>
     </header>
     <section id="about">
         <div class="container">
