--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
         </div>
         <div>
-            <h1 class = "header-text"> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
+            <h1 class = "container"> Hello, I am <span>Ziad!</span> <br> I am an aspiring software engineer majoring in <span>CS + Math.</span> </h1>
             <h2 class="centered-text">"Hello, world!"</h2>
         </div>
     </header>
