--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="icon" href="imgs/logo.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
     <header>
