fixed github link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class = "row">
                 <div class="about-col-2">
-                    <h2 class = "subtitle socials">Projects (<a href=""class="socials">GitHub</a>):<br> </h2> <br>
+                    <h2 class = "subtitle socials">Projects (<a href="https://github.com/zelshahawy"class="socials">GitHub</a>):<br> </h2> <br>
                     <ul>
                         <li> <h3> Guessing game on Python </h3> <p> This is a simple yet engaging game where players are presented with a set of letters in the terminal and are tasked with creating words using those letters. The game includes a score tracker to keep track of your word-building prowess. <br> <br> </p> </li>
                         <li> <h3> Tic Tac To - Python Edition </h3> <p> <span>This Python program allows two players to take turns placing 'X' and 'O' marks on a 3x3 grid, with the objective of getting three in a row vertically, horizontally, or diagonally. The program is user-friendly, engaging, and offers a fun way to test your strategic thinking and decision-making skills. Object Oriented Proframming is utilised wholly in the program  </span> <br> <br> <span> </p> </li>
