fixed css of links

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
         <div class="container">
             <div class = "row">
                 <div class="about-col-2">
-                    <h2 class = "subtitle socials">Projects (<a href="https://github.com/zelshahawy" class="socials"> GitHub</a>):<br> </h2> <br>
+                    <h2 class = "subtitle socials">Projects (<a href="https://github.com/zelshahawy" class="socials">GitHub</a>):<br> </h2> <br>
                     <ul>
-                        <li> <h3> Go</h3> <p>Led a team of three to develop a Python-based Go game.
-                            Responsibilities included game logic, GUI, terminal interface, basic AI, and testing.
-                            Utilized technologies such as Python, pygame, pytest, git, and GitHub. Due to school policy, github repository is private. You can, however, download a zip file </p> <a href="attachments/Go - Project.zip" download class="socials"> here</a>
-                            Successfully completed project with playable game and comprehensive testing.<br> <br> </li>
+                        <li> 
+                            <h3> Go</h3> 
+                            <p class="socials">Led a team of three to develop a Python-based Go game. Responsibilities included game logic, GUI, terminal interface, basic AI, and testing. Utilized technologies such as Python, pygame, pytest, git, and GitHub and other python libraries. Due to school policy, github repository is private. You can, however, download a zip file <a href="attachments/Go - Project.zip" download >here</a>. Successfully completed project with playable game and comprehensive testing.</p>
+                            <br> 
+                            <br> 
+                        </li>
                         <li> <h3> Guessing game on Python </h3> <p> This is a simple yet engaging game where players are presented with a set of letters in the terminal and are tasked with creating words using those letters. The game includes a score tracker to keep track of your word-building prowess. <br> <br> </p> </li>
                         <li> <h3> Tic Tac To - Python Edition </h3> <p> <span>This Python program allows two players to take turns placing 'X' and 'O' marks on a 3x3 grid, with the objective of getting three in a row vertically, horizontally, or diagonally. The program is user-friendly, engaging, and offers a fun way to test your strategic thinking and decision-making skills. Object Oriented Proframming is utilised wholly in the program  </span> <br> <br> <span> </p> </li>
                         <li> <h3>Language Module</h3> <p> This program is a simple yet powerful language program designed for the analysis of literary works, especially those of renowned writers like William Shakespeare.
